lib/tests/fixtures/compiler/parser/illegal_function_def.baseline
Error: illegal_function_def.pp:2:5: functions can only be defined at top-level.
  function bar {
  ^~~~~~~~~~~~~~
